<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context="com.arunsudharsan.eecnotesforyou.Settingsfrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <android.support.v7.widget.CardView
            android:id="@+id/cvchangehome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            android:visibility="visible"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/homepathtv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:text="Your Home is"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_changehome"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="Change home" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cvchoosedept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/select_your_dept_and_sem"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"

                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#808080" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <Spinner
                            android:id="@+id/spinnerfordept"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center|fill_horizontal"

                            android:padding="15dp"
                            android:prompt="@string/spinner_title_for_dept"
                            android:spinnerMode="dialog" />


                        <Spinner
                            android:id="@+id/spinnerforsem"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center|fill_horizontal"

                            android:padding="15dp"
                            android:prompt="@string/spinner_title_for_sem"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/savedeptandsempermanently"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="Save" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
