<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arunsudharsan.eecnotesforyou.Dashboard"
    tools:showIn="@layout/activity_dashboard">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cardviewundoseletion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            android:visibility="gone"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/yourhomeistv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:text="Your Home is"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/changehome"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="Change home" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardviewchoosedept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/select_your_dept_and_sem"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"

                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#808080" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <Spinner
                            android:id="@+id/spinnerfordept"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center|fill_horizontal"

                            android:padding="15dp"
                            android:prompt="@string/spinner_title_for_dept"
                            android:spinnerMode="dialog" />


                        <Spinner
                            android:id="@+id/spinnerforsem"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center|fill_horizontal"

                            android:padding="15dp"
                            android:prompt="@string/spinner_title_for_sem"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/savedsodismisscvofchoosinghome"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="Save" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/pathofthehome"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="All Department notes"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btn_dpt"

                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Departments" />

                        <Button
                            android:id="@+id/btn_mydownloads"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="My Downloads" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="External links"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btn_auhome"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="AU Home" />

                    <Button
                        android:id="@+id/btn_EEC"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="EEC" />

                    <Button
                        android:id="@+id/btn_auresults"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="Results" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout

                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView


                    android:id="@+id/tvsymposiumnameforcard"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/symposium_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/tvsymposiumcontentsforcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brief_content_of_the_symposium" />


                <Button
                    android:id="@+id/moredetails"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="0dp"
                    android:text="@string/register" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardviewoffline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"

                            android:layout_height="match_parent">


                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:padding="15dp"
                                android:src="@drawable/downloadpdf" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:padding="5dp"
                                android:text="@string/pdffilesofflinemessage"
                                android:textAppearance="?android:textAppearanceLarge"
                                android:textColor="#000000"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>

                <Button
                    android:id="@+id/dismisscardviewoffline"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:text="Dismiss" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
